--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>stefafafan</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -43,19 +43,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
-      </p>
-      <p>
-        Read the blog posts or check
-        <LinkButton
+        stefafafan is a Japanese software engineer working at Hatena Co., Ltd.
+        This blog is mostly translations of his entries of <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
+          href="https://blog.stenyan.jp/">his Japanese blog.</LinkButton
         >
-          README
-        </LinkButton> for more info.
       </p>
       {
         // only display if at least one social link is enabled
