--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,6 +71,9 @@ const fallbackImageURL = new URL(SITE.ogImage, Astro.url.origin).href;
       onload="this.onload=null;this.rel='stylesheet'"
     />
 
+    <!-- Hatena -->
+    <link rel="author" href="http://www.hatena.ne.jp/stefafafan/" />
+
     <!-- Add for twitter share button: https://developer.twitter.com/en/docs/twitter-for-websites/javascript-api/guides/set-up-twitter-for-websites -->
     <script>
       window.twttr = (function (d, s, id) {
