--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,7 @@ const fallbackImageURL = new URL(SITE.ogImage, Astro.url.origin).href;
     />
 
     <!-- Hatena -->
-    <link rel="author" href="https://www.hatena.ne.jp/stefafafan/" />
+    <link rel="author" href="http://www.hatena.ne.jp/stefafafan/" />
 
     <!-- Add for twitter share button: https://developer.twitter.com/en/docs/twitter-for-websites/javascript-api/guides/set-up-twitter-for-websites -->
     <script>
